--- a/src/pages/peer-review-page/projectsTab/Guide.mdx
+++ b/src/pages/peer-review-page/projectsTab/Guide.mdx
@@ -7,7 +7,7 @@ import { ShortUsername } from 'src/shared/mdx-components/ShortUsername';
 
 - حتما **توضیحات زیر هر سوال** رو مطالعه کن
 
-- اگر در برخی فعالیت‌ها مشاهدات کافی یا پیشنهادی برای بهبود نداری، می‌تونی اون قسمت‌های رو خالی بذاری.
+- اگر در برخی فعالیت‌ها مشاهدات کافی یا پیشنهادی برای بهبود نداری، می‌تونی اون قسمت‌ها رو خالی بذاری.
 
 ---
 
