--- a/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
@@ -3,7 +3,7 @@ import { ShortUsername } from 'src/shared/mdx-components/ShortUsername';
 
 **چی بنویسم؟**
 
-به نظرت کدوم ویژگی‌ها و رفتارهای <Username/> از نقاط قوتش محسوب میشه و باید به تکیه کردن بهشون ادامه بده و حتی در خودش تقویت کنه؟
+به نظرت کدوم ویژگی‌ها و رفتارهای <Username/> از نقاط قوتش محسوب میشه و باید بهشون ادامه بده و حتی در خودش تقویت کنه؟
 همچنین در کدوم ویژگی‌ها و رفتارها جای بهبود داره و باید در آیندهٔ نزدیک، روی بهبود یا توسعه‌شون تمرکز کنه؟
 برای هر بخش حداکثر ۳ مورد از مهم‌ترین موارد رو ذکر کن.
 
