fix: improve ux writing for peer review (#436)
* fix: improve ux writing for peer review

Co-authored-by: Mohammadreza Deljavan <31951305+mdeljavan@users.noreply.github.com>

--- a/src/pages/peer-review-page/projectsTab/Guide.mdx
+++ b/src/pages/peer-review-page/projectsTab/Guide.mdx
@@ -3,18 +3,14 @@ import { ShortUsername } from 'src/shared/mdx-components/ShortUsername';
 
 **چی بنویسم؟**
 
-برای هر فعالیت، ابتدا دستاوردهایی که
-*<Username/>*
-نوشته رو بخون و بعد، ارزیابی خودت به همراه مشاهده‌ها و بازخوردهات رو براش بنویس.
+برای هر فعالیت، ابتدا دستاوردهایی که <Username/> نوشته رو بخون و بعد، به سوالات مربوط به هر فعالیت پاسخ بده.
 
-* اگر ارزیابی‌ت بالاتر یا پایین‌تر از حد انتظاره، **انتظار خودت رو توصیف کن** تا مشخص بشه چرا اینطور ارزیابی کردی.
+- حتما **توضیحات زیر هر سوال** رو مطالعه کن
 
-* در صورتی که در مورد موضوع اطلاعات کافی داری، بازخورد خودت رو همراه با **راهکاری برای بهبود** بنویس.
+- اگر در برخی فعالیت‌ها مشاهدات کافی یا پیشنهادی برای بهبود نداری، می‌تونی اون قسمت‌ها رو خالی بذاری.
 
 ---
 
 **کی چی می‌بینه؟**
 
-مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ مرور عملکرد، برای
-*<ShortUsername/>*
-به شکل بی‌نام و برای مدیرش با نام مرورکننده قابل مشاهده خواهد بود.
+مواردی که اینجا می‌نویسی در فازهای بعدی این دورهٔ مرور عملکرد، برای <ShortUsername/> و مدیرش به شکل _شناس (همراه با نام شما)_ قابل مشاهده خواهد بود (این دوره از این نظر با دوره‌های گذشته _متفاوته_).
