--- a/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
@@ -3,9 +3,7 @@ import { ShortUsername } from 'src/shared/mdx-components/ShortUsername';
 
 **چی بنویسم؟**
 
-به نظرت کدوم ویژگی‌ها و رفتارهای
-_<Username/>_
-از نقاط قوتش محسوب میشه و باید به تکیه کردن بهشون ادامه بده و حتی در خودش تقویت کنه؟
+به نظرت کدوم ویژگی‌ها و رفتارهای <Username/> از نقاط قوتش محسوب میشه و باید بهشون ادامه بده و حتی در خودش تقویت کنه؟
 همچنین در کدوم ویژگی‌ها و رفتارها جای بهبود داره و باید در آیندهٔ نزدیک، روی بهبود یا توسعه‌شون تمرکز کنه؟
 برای هر بخش حداکثر ۳ مورد از مهم‌ترین موارد رو ذکر کن.
 
@@ -19,6 +17,4 @@ _<Username/>_
 
 **کی چی می‌بینه؟**
 
-مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ مرور عملکرد، برای
-_<ShortUsername/>_
-به شکل بی‌نام و برای مدیرش با نام مرورکننده قابل مشاهده خواهد بود.
+مواردی که اینجا می‌نویسی در فازهای بعدی این دورهٔ مرور عملکرد، برای <ShortUsername/> و مدیرش به شکل _شناس (همراه با نام شما)_ قابل مشاهده خواهد بود (این دوره از این نظر با دوره‌های گذشته _متفاوته_).
